--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <meta property="og:image:type" content="image/" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
-  <meta property="og:description" content="Chào mừng bạn đến với trang bán vé chào tân sinh viên dành cho PTITER 2023!" />
+  <meta property="og:description"
+    content="Chào mừng bạn đến với trang bán vé chào tân sinh viên dành cho PTITER 2023!" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Chào! Sinh viên 2023 - Next Gen PTIT</title>
+  <title>REBELSAINT RECORDS</title>
 </head>
 
 <body>
