--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="rebelsaintrecords.com/" />
-    <meta property="og:image" content="%PUBLIC_URL%/LOGO_CSV23.png" />
-    <meta
-      property="og:image:secure_url"
-      content="%PUBLIC_URL%/LOGO_CSV23.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:image:secure_url" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:image:type" content="image/" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
     <meta property="og:description" content="rebelsaintrecords.com/" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
